tests/rosetta/out/Smalltalk/angle-difference-between-two-bearings-1.out
/tmp/angle-difference-between-two-bearings-1.st:13: parse error, expected ']'
