tests/rosetta/out/Smalltalk/angle-difference-between-two-bearings-1.st
" Generated by Mochi compiler v0.10.26 on 2025-07-16T09:48:36Z
"
| angleDiff d testCases |
angleDiff := [:b1 :b2 | d := (b2 - b1).
((d < (0 - 180))) ifTrue: [
  (d + 360)
] .
((d > 180)) ifTrue: [
  (d - 360)
] .
d ].
testCases := {{20. 45}. {(0 - 45). 45}. {(0 - 85). 90}. {(0 - 95). 90}. {(0 - 45). 125}. {(0 - 45). 145}. {29.4803. (0 - 88.6381)}. {(0 - 78.3251). (0 - 159.036)}}.
testCases do: [:tc |
  Transcript show: (angleDiff value: tc at: 0 value: tc at: 1) printString; cr.
]
.
